--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body {background-color: aquamarine;}
+body {background-color: #3DFDB6;}
 h1{text-align: center; font-size: 50px;}
-p{font-size: 20px; color: green;}
-h3{text-align: center; font-size: 35px; color: blue;}
-h1, h3{background-color: slategrey;}
+p{font-size: 20px; color: #FBAF3C;}
+h3{text-align: center; font-size: 35px; color: #E3DC36;}
+h1, h3{background-color: #4549FF;}
